# Decants_dev

./: AUDIT_REPORT.md  AUDIT_REPORT_2025.md  AUDIT_REPORT_CURRENT.md  ENVIRONMENT.md  PLAN.md  README.md  pyproject.toml  research_outline.md  test_audit_export.pkl.params.json  test_base_load.pkl.audit.json  test_base_load.pkl.params.json  test_gam_model.pkl.audit.json  test_gam_model.pkl.params.json  validation_plan.md  validation_report_template.md
decants/: __init__.py  base.py  integration.py  objects.py
decants.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
decants/methods/: arima.py  double_ml.py  gam.py  gaussian_process.py  loess.py  ml.py  prophet.py
decants/utils/: benchmarking.py  crossfit.py  diagnostics.py  plotting.py  time.py
examples/: demonstration.py  model_comparison.py
reference_code/: LWPTrends_v2102.R  LWPTrends_v2502.r  RunLWPTrendsExample_v2502.R
tests/: test_arima.py  test_audit_enforcement.py  test_audit_enhancements.py  test_audit_fixes.py  test_audit_mode.py  test_benchmarking.py  test_covariate_integration.py  test_double_ml.py  test_fast_loess_multivariate.py  test_gam.py  test_gam_fixes.py  test_gaussian_process.py  test_gp_integration.py  test_integration.py  test_loess.py  test_ml.py  test_persistence.py  test_phase0.py  test_prophet.py  test_splitter_safety.py
validation/protocol_A1_signal_recovery/: README.md  validate_signal_recovery.py
validation/protocol_A2_nonlinear_interactions/: README.md  validate_nonlinear.py
validation/protocol_A3_confounding/: README.md  summary_results.csv  validate_A3.py
(+21 files in other folders)
