[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decants"
version = "0.1.0"
description = "Decant Time Series - Unified API for time series covariate adjustment"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "pygam",
    "prophet",
    "statsmodels",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pygam",
    "statsmodels",
    "prophet",
    "scikit-learn",
    "matplotlib",
    "rpy2",
]

[tool.setuptools]
packages = ["decants"]
